shaku/tests/ui/component_missing_dependency.stderr
error[E0277]: the trait bound `TestModule: shaku::module::HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/component_missing_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [ComponentImpl],
25 | |         providers = []
26 | |     }
27 | | }
   | |_^ the trait `shaku::module::HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
   = help: the following implementations were found:
             <TestModule as shaku::module::HasComponent<<ComponentImpl as shaku::component::Component<TestModule>>::Interface>>
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `ComponentImpl`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0277]: the trait bound `TestModule: shaku::module::HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/component_missing_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [ComponentImpl],
25 | |         providers = []
26 | |     }
27 | | }
   | |_^ the trait `shaku::module::HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
   = help: the following implementations were found:
             <TestModule as shaku::module::HasComponent<<ComponentImpl as shaku::component::Component<TestModule>>::Interface>>
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `ComponentImpl`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0277]: the trait bound `TestModule: shaku::module::HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/component_missing_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [ComponentImpl],
25 | |         providers = []
26 | |     }
27 | | }
   | |_^ the trait `shaku::module::HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
   = help: the following implementations were found:
             <TestModule as shaku::module::HasComponent<<ComponentImpl as shaku::component::Component<TestModule>>::Interface>>
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `ComponentImpl`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0277]: the trait bound `TestModule: shaku::module::HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/component_missing_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [ComponentImpl],
25 | |         providers = []
26 | |     }
27 | | }
   | |_^ the trait `shaku::module::HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
   = help: the following implementations were found:
             <TestModule as shaku::module::HasComponent<<ComponentImpl as shaku::component::Component<TestModule>>::Interface>>
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `ComponentImpl`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0277]: the trait bound `TestModule: shaku::module::HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/component_missing_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [ComponentImpl],
25 | |         providers = []
26 | |     }
27 | | }
   | |_^ the trait `shaku::module::HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
   = help: the following implementations were found:
             <TestModule as shaku::module::HasComponent<<ComponentImpl as shaku::component::Component<TestModule>>::Interface>>
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `ComponentImpl`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
